Fixed positioning/overlap problem with sidebar.

--- a/app/styles/less/components/about.less
+++ b/app/styles/less/components/about.less
@@ -95,6 +95,8 @@
         font-family: 'Fira Sans', sans-serif;
         font-size: 0.938em; // 15px
         line-height: 2.000em; // 30px
+        position: relative;
+            z-index: 1;
         width: @entry_image_width;
 
         p
@@ -115,8 +117,6 @@
         display: inline-block;
         width: 100%;
         margin-left: -1 * @entry_image_width;
-        position: relative;
-            z-index: -1;
 
         .inner-sidebar
         {
